--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 JIRA_CLOUD_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 ATLASSIAN_GRAPHQL_URI=https://xxxxxxxxxxxx.atlassian.net/gateway/api/graphql
 ATLASSIAN_APP_TOKEN=<token>
+
+# Vercel KV Database
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
