--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@apollo/client": "^3.8.10",
     "@vercel/kv": "^1.0.1",
+    "clsx": "^2.1.0",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
+    "nanoid": "^5.0.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
