--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@taalpha/prettier-config": "^1.0.0",
+    "@taalpha/tsconfig": "^1.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -34,5 +36,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "prettier": "@taalpha/prettier-config"
 }
