--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
+    "@apollo/server": "^4.10.1",
+    "@as-integrations/next": "^3.0.0",
     "@prisma/client": "^5.8.1",
     "@types/big.js": "^6.2.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/md5": "^2.3.5",
     "@vercel/kv": "^1.0.1",
     "big.js": "^6.2.1",
     "clsx": "^2.1.0",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
     "nanoid": "^5.0.4",
     "next": "14.0.4",
     "prisma": "^5.8.1",
