--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "nanoid": "^5.0.4",
     "next": "14.0.4",
     "prisma": "^5.8.1",
+    "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-use": "^17.4.3",
